--- a/src/app/body-container/login-form/login-form.component.scss
+++ b/src/app/body-container/login-form/login-form.component.scss
@@ -22,7 +22,7 @@ form {
         width: 100%;
         display: block;
       }
-      input {
+      input, select {
         display: block;
         width: 90%;
         padding: 5px;
