--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
 <header class="header">
     {{header}}
+    <a [routerLink]="['/home']" routerLinkActive="active" >Home</a>
+    <a [routerLink]="['/login']" routerLinkActive="active">Logout</a>
 </header>
